# Dea-with-guroby

./: Gurobi_dea.py  README.md  dynamic_dea.py  pyproject.toml
backup/: Gurobi_dea.py
examples/: quickstart.py
src/gurobi_dea/: __init__.py  base.py  utils.py
src/gurobi_dea/models/: __init__.py  additive.py  bootstrap.py  cost_revenue.py  cross_efficiency.py  ddf.py  dynamic.py  dynamic_network.py  ebm.py  malmquist.py  malmquist_luenberger.py  meta_frontier.py  network.py  radial.py  sbm.py  window.py
